# Super-Mario

./: CMakeLists.txt  README.md
cmake/modules/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_image.cmake  tinyxml2_helper.cmake
database/: db.xml
headers/: BadTurtle.h  Camera.h  Component.h  Database.h  DrawingComponent.h  Enemy.h  Game.h  GameObject.h  Map.h  Player.h  SeverusSnape.h  World.h
src/: BadTurtle.cpp  Camera.cpp  Component.cpp  Database.cpp  DrawingComponent.cpp  Enemy.cpp  Enums.h  Game.cpp  GameObject.cpp  Map.cpp  Player.cpp  SeverusSnape.cpp  World.cpp  main.cpp
